--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 <meta charset="utf-8">
 
 
+<link rel="stylesheet" href="style.css">
 
 
 </head>
 <body>
 
-    <div>Name: s </div>
-    <div>Bio: sd </div>
-    <div>Linkedin: sdf </div>
-    <div>GitHub URL: sdfg </div>
+    <div class="name">Name: fsd </div>
+    <div>Bio: werw </div>
+    <div>Linkedin: ccfdsf </div>
+    <div>GitHub URL: tthrhr </div>
     
 
 </body>
